--- a/pageviewcontroller-sample/Base.lproj/Main.storyboard
+++ b/pageviewcontroller-sample/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pzm-GJ-2AI">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Main View Controller-->
+        <scene sceneID="xKw-mv-V4c">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="iNZ-Ai-3go" customClass="MainViewController" customModule="pageviewcontroller_sample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="70M-Gh-SsV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fDC-rF-tad">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FZI-x0-nZL">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <subviews>
+                                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="28h-FA-EHg">
+                                                <rect key="frame" x="0.0" y="250" width="375" height="417"/>
+                                                <connections>
+                                                    <segue destination="SaT-5a-LSw" kind="embed" identifier="pageViewControllerSegue" id="BA7-sw-aHj"/>
+                                                </connections>
+                                            </containerView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cnq-0G-sVx" customClass="HeaderView" customModule="pageviewcontroller_sample" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                                                <color key="backgroundColor" red="0.5554989924" green="1" blue="0.52187924389999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="250" id="azl-cq-Osr"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="cnq-0G-sVx" firstAttribute="top" secondItem="FZI-x0-nZL" secondAttribute="top" id="Ttz-8R-3Ju"/>
+                                            <constraint firstAttribute="bottom" secondItem="28h-FA-EHg" secondAttribute="bottom" id="UHU-YX-wp9"/>
+                                            <constraint firstAttribute="trailing" secondItem="cnq-0G-sVx" secondAttribute="trailing" id="XbP-9I-FL5"/>
+                                            <constraint firstItem="28h-FA-EHg" firstAttribute="leading" secondItem="FZI-x0-nZL" secondAttribute="leading" id="bgk-hU-BpQ"/>
+                                            <constraint firstItem="cnq-0G-sVx" firstAttribute="leading" secondItem="FZI-x0-nZL" secondAttribute="leading" id="gdR-SD-aZK"/>
+                                            <constraint firstAttribute="trailing" secondItem="28h-FA-EHg" secondAttribute="trailing" id="nQO-ZS-FQ1"/>
+                                            <constraint firstItem="28h-FA-EHg" firstAttribute="top" secondItem="cnq-0G-sVx" secondAttribute="bottom" id="zKD-IA-gS0"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="FZI-x0-nZL" firstAttribute="leading" secondItem="fDC-rF-tad" secondAttribute="leading" id="Dfs-Fz-SXF"/>
+                                    <constraint firstAttribute="trailing" secondItem="FZI-x0-nZL" secondAttribute="trailing" id="YIW-nw-s7D"/>
+                                    <constraint firstItem="FZI-x0-nZL" firstAttribute="top" secondItem="fDC-rF-tad" secondAttribute="top" id="okn-ad-PRV"/>
+                                    <constraint firstAttribute="bottom" secondItem="FZI-x0-nZL" secondAttribute="bottom" id="y9t-11-CEf"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="FZI-x0-nZL" firstAttribute="width" secondItem="70M-Gh-SsV" secondAttribute="width" id="3vx-aT-aJo"/>
+                            <constraint firstItem="FZI-x0-nZL" firstAttribute="height" secondItem="70M-Gh-SsV" secondAttribute="height" id="atW-Id-pgS"/>
+                            <constraint firstItem="fDC-rF-tad" firstAttribute="leading" secondItem="7wA-8l-BWZ" secondAttribute="leading" id="dwg-nB-mrm"/>
+                            <constraint firstItem="fDC-rF-tad" firstAttribute="top" secondItem="7wA-8l-BWZ" secondAttribute="top" id="jbt-MM-Hju"/>
+                            <constraint firstItem="7wA-8l-BWZ" firstAttribute="bottom" secondItem="fDC-rF-tad" secondAttribute="bottom" id="mzW-UH-nUF"/>
+                            <constraint firstItem="7wA-8l-BWZ" firstAttribute="trailing" secondItem="fDC-rF-tad" secondAttribute="trailing" id="oa2-VU-CWU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7wA-8l-BWZ"/>
                     </view>
+                    <navigationItem key="navigationItem" id="TXE-Di-bUE"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="containerView" destination="28h-FA-EHg" id="HoK-JN-ZgA"/>
+                        <outlet property="headerView" destination="cnq-0G-sVx" id="3A0-NJ-mlE"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tOg-WE-SXe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="904.79999999999995" y="-151.57421289355324"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="fi4-ds-dgL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Pzm-GJ-2AI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="hEa-K0-3Yg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iNZ-Ai-3go" kind="relationship" relationship="rootViewController" id="fHi-V2-2Hm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PNb-le-E5V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-34.399999999999999" y="-151.57421289355324"/>
+        </scene>
+        <!--Parent View Controller-->
+        <scene sceneID="t5t-WD-Bfr">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="SaT-5a-LSw" customClass="ParentViewController" customModule="pageviewcontroller_sample" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VRL-wY-CSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1646" y="-152"/>
         </scene>
     </scenes>
 </document>
